# icscli

./: .gitignore  README.md  justfile
.github/workflows/: test.yml  upload_container.yml
docker/: Dockerfile
docs/: ics_format.txt
git-hooks/: pre-commit
src/: cli_arg_parsing.c  cli_arg_parsing.h  date_time_handling.c  date_time_handling.h  file_handling.c  file_handling.h  insert_event.c  insert_event.h  list_handling.c  list_handling.h  main.c  meson.build  parse_ics.c  parse_ics.h  read_until_nl.c  read_until_nl.h  read_until_string.c  read_until_string.h  seek_string_a.c  seek_string_a.h  string_handling.c  string_handling.h
test_files/: calendar.ics  failed_cal.ics  folded_with_tabs.ics  received_ical.ics
tests/: calendar.ics  folded_with_spaces.ics  received_ical.ics  run_tests.sh  start_date_is_first_field.ics
unit-tests/: meson.build  test_parse_ics_file.c  test_pretty_print_date_time.c  test_print_upcoming.c
unit_tests/: meson.build
